# broke

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  Makefile  ROADMAP.md  docker-compose.local.yaml  docker-compose.yaml  docker-entrypoint.sh  dump.md  dump.rdb  output.md  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  run.py  test_local.py  test_peewee.py  test_reports.py  test_session_500.py  test_timeline.py
.github/: ARCHITECTURE.md  CI_SETUP_SUMMARY.md  FIRST_RUN_CHECKLIST.md  QUICK_START.md
.github/workflows/: README.md  ci.yml  dependency-check.yml  desktop-release.yml  pr-checks.yml  publish.yml  update-pyproject.yml
app/: cli.py  config.py  monitor_worker.py  server.py
app/templates/: anon_track.jinja2  anon_wizard.jinja2  changelog.jinja2  changelog_editor.jinja2  changelog_manage.jinja2  dashboard.jinja2  error.jinja2  login.jinja2  (+24 more)
electron/: README.md  main.js  package-lock.json  package.json  preload.js  security.js  security.test.js
scripts/: convert_to_blueprints.py  fix_secureroute_paths.py  migrate.py  migrate_001_ticket_active.py  migrate_002_anon.py  migrate_002_changelog.py  migrate_003_changelog_refactor.py  migrate_004_changelog_status.py  migrate_005_ticket_parent.py  migrate_006_work_cycles.py  migrate_007_agent_tokens.py  migrate_008_project_settings.py  migrate_009_error_escalation_spike.py  migrate_009_project_archived.py  migrate_010_parts_untie_projects.py  migrate_011_monitors.py  migrate_012_monitor_checks.py  populate_error_messages.py  run-checks.sh  run-checks.sh.bak  update.sh
server/: app.py  cli.py  config.py  server.py
tests/: conftest.py  fixtures.py  test_ai_delegate.py  test_anon.py  test_application_prefix.py  test_auth.py  test_bugs.py  test_bugs_extended.py  test_changelog.py  test_desktop_auth.py  test_email_templates.py  test_features.py  test_github_webhooks.py  test_github_webhooks_pr.py  test_github_webhooks_push.py  test_mail.py  test_monitors.py  test_news.py  test_news_extended.py  test_notifications.py  test_security.py  test_sentry_envelopes.py  test_settings.py  test_settings_extended.py  test_stale_tickets.py  test_ticket_lifecycle.py  test_tickets.py  test_tickets_extended.py  test_updater.py  test_work_cycles_agent.py
updater/: Dockerfile  cli.py  main.py  requirements.txt
(+127 files in other folders)
