[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broke"
version = "0.1.0"
description = "A bug tracking and project management system"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "valteryde"}
]
keywords = ["bug-tracker", "project-management", "flask", "tickets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

dependencies = [
    "flask",
    "pyargon2",
    "faker",
    "peewee",
    "sentry_sdk",
    "gunicorn",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
test = [
    "ward",
    "playwright",
]

[project.scripts]
broke = "server.cli:main"

[project.urls]
Homepage = "https://github.com/valteryde/broke"
Repository = "https://github.com/valteryde/broke"
Issues = "https://github.com/valteryde/broke/issues"

[tool.setuptools]
packages = ["server", "server.utils", "server.views"]

[tool.ward]
path = ["tests"]
order = "standard"
test-output-style = "test-per-line"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
